Unveröffentlicht:
- install_config prüft USER_CHANNEL_* und USER_CHANNEL_*_TYPE jetzt mit `[[ -v ... ]]` und indirekter Expansion, entfernt sämtliche eval-Aufrufe und verhindert die Ausführung gespeicherter Shell-Fragmente (z. B. `Service $1`, ``Label `echo foo` ``); ein Regressionstest bestätigt die unveränderte Übernahme aus dbus-adc.user.conf ohne Kommandoausführung.
- Kommentarparser erkennt `python3`, fällt andernfalls auf `python` bzw. eine Shell-Implementierung zurück und nutzt denselben Automaten für alle Varianten; ein neuer Test simuliert eine Umgebung ohne `python3` und bestätigt weiterhin korrekt übernommene Template-Werte.
- Default-Template-Parser nutzt eine Shell-basierte Zeichenanalyse, entfernt Kommentarzeichen ausschließlich außerhalb von Quotes und bewahrt so Labeltexte wie `Temp "#1"` sowie `label "Service #1"`; ein Regressionstest deckt das Szenario ab.
- Python-D-Bus-Loader prüft vor dem Einsatz von `shlex.quote`, ob die Funktion verfügbar ist, und verwendet andernfalls automatisch `pipes.quote` bzw. eine POSIX-konforme Fallback-Routine mit identischem Escaping.
- Neuer Shell-Test simuliert einen Interpreter ohne `shlex.quote`, inklusive Stub-D-Bus-Modul, und verifiziert korrekte Maskierung für Leerzeichen und einfache Anführungszeichen.
- README dokumentiert explizit die unterstützten Python-Interpreter (Python 2.7 sowie alle Python-3-Varianten) für den nicht-interaktiven Konfigurationsabruf.
- Vref-Validierung akzeptiert nun auch ganzzahlige Eingaben im Float-Modus und nutzt für Primär- und Fallback-Prüfung denselben Regex.
- README stellt klar, dass Ganzzahlen zulässig sind und Eingaben mit Dezimalkomma konsequent auf den Fallback-Wert zurückfallen.
- Standard-Template-Parser deaktiviert während der Tokenisierung die Pathname-Expansion und verarbeitet Label-Vorgaben inklusive `*` unverändert bis in die Gerätekonfiguration; Regressionstest deckt das Literal-Szenario ab.