@@ -1,4 +1,5 @@
 Unveröffentlicht:
+- Standard-Template-Parser trennt Direktive und Rohtext zeichengetreu, übernimmt Label-Strings inklusive mehrfacher Leerzeichen unverändert und wird durch einen Regressionstest mit doppeltem Abstand abgesichert.
 - install_config prüft USER_CHANNEL_* und USER_CHANNEL_*_TYPE jetzt mit `[[ -v ... ]]` und indirekter Expansion, entfernt sämtliche eval-Aufrufe und verhindert die Ausführung gespeicherter Shell-Fragmente (z. B. `Service $1`, ``Label `echo foo` ``); ein Regressionstest bestätigt die unveränderte Übernahme aus dbus-adc.user.conf ohne Kommandoausführung.
 - Kommentarparser erkennt `python3`, fällt andernfalls auf `python` bzw. eine Shell-Implementierung zurück und nutzt denselben Automaten für alle Varianten; ein neuer Test simuliert eine Umgebung ohne `python3` und bestätigt weiterhin korrekt übernommene Template-Werte.
 - Default-Template-Parser nutzt eine Shell-basierte Zeichenanalyse, entfernt Kommentarzeichen ausschließlich außerhalb von Quotes und bewahrt so Labeltexte wie `Temp "#1"` sowie `label "Service #1"`; ein Regressionstest deckt das Szenario ab.
